--- a/08_movilist/index.html
+++ b/08_movilist/index.html
@@ -14,7 +14,7 @@
         <div class="movie_container">
             <div class="poster_wrap">
                 <div class="poster">
-                    <img src="../imgs/sample.jpg" alt="">
+                    <img src="" alt="post">
                 </div>
                 <div class="arrows">
                     <div class="arrow prev"><i class="xi-angle-left"></i></div>
@@ -23,7 +23,12 @@
             </div>
 
             <div class="movie_info">
-                
+                <div class="title_wrap">
+                    <span class="num">1</span>
+                    <h2 class="title"></h2>
+                </div>
+                <p class="director">감독 : <span></span></p>
+                <p class="text"></p>
             </div>
         </div>
     </div>
