--- a/04_modal/index2.html
+++ b/04_modal/index2.html
@@ -20,7 +20,7 @@
     <div class="modal">
         <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, sint.</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure neque quam cum fugiat facilis eius reiciendis culpa, cupiditate alias consequuntur blanditiis esse quas? Dolor impedit, cum aut sunt delectus consectetur!</p>
-        <button class="colse_btn">close</button>
+        <button class="close_btn">close</button>
     </div>
 
     <script src="./app2.js"></script>
